Implemented payroll feature, Added export to pdf feature

--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -204,6 +204,18 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="/staff/add">
+                            <i class="fa-solid fa-user-plus"></i>
+                            <p>Add Staff</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/staff/all">
+                            <i class="fa-solid fa-users"></i>
+                            <p>All Staff</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="/logout">
                             <i class="la la-th"></i>
                             <p>Log Out</p>
