--- a/views/all-products.ejs
+++ b/views/all-products.ejs
@@ -205,6 +205,18 @@
 						</a>
 					</li>
 					<li class="nav-item">
+						<a href="/staff/add">
+							<i class="fa-solid fa-user-plus"></i>
+							<p>Add Staff</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/staff/all">
+							<i class="fa-solid fa-users"></i>
+							<p>All Staff</p>
+						</a>
+					</li>
+					<li class="nav-item">
 						<a href="/logout">
 							<i class="fas fa-sign-out-alt"></i>
 							<p>Log Out</p>
