--- a/views/update-staff.ejs
+++ b/views/update-staff.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>MaryBill Conglomerate Ltd. - Dashboard</title>
+	<title>MaryBill Conglomerate Ltd. - Update Staff</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
 		name='viewport' />
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -49,72 +49,7 @@
 								aria-haspopup="true" aria-expanded="false">
 								<i class="la la-envelope"></i>
 							</a>
-							<!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Action</a>
-								<a class="dropdown-item" href="#">Another action</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Something else here</a>
-							</div> -->
 						</li>
-						<!-- <li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">
-								<i class="la la-bell"></i>
-								<span class="notification"></span>
-							</a>
-							<ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
-								<li>
-									<div class="dropdown-title">You have 4 new notification</div>
-								</li>
-								<li>
-									<div class="notif-center">
-										<a href="#">
-											<div class="notif-icon notif-primary"> <i class="la la-user-plus"></i>
-											</div>
-											<div class="notif-content">
-												<span class="block">
-													New user registered
-												</span>
-												<span class="time">5 minutes ago</span>
-											</div>
-										</a>
-										<a href="#">
-											<div class="notif-icon notif-success"> <i class="la la-comment"></i> </div>
-											<div class="notif-content">
-												<span class="block">
-													Rahmad commented on Admin
-												</span>
-												<span class="time">12 minutes ago</span>
-											</div>
-										</a>
-										<a href="#">
-											<div class="notif-img">
-												<img src="/img/profile2.jpg" alt="Img Profile">
-											</div>
-											<div class="notif-content">
-												<span class="block">
-													Reza send messages to you
-												</span>
-												<span class="time">12 minutes ago</span>
-											</div>
-										</a>
-										<a href="#">
-											<div class="notif-icon notif-danger"> <i class="la la-heart"></i> </div>
-											<div class="notif-content">
-												<span class="block">
-													Farrah liked Admin
-												</span>
-												<span class="time">17 minutes ago</span>
-											</div>
-										</a>
-									</div>
-								</li>
-								<li>
-									<a class="see-all" href="javascript:void(0);"> <strong>See all
-											notifications</strong> <i class="la la-angle-right"></i> </a>
-								</li>
-							</ul>
-						</li> -->
 						<li class="nav-item dropdown">
 							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img
 									src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span>Steven</span></span>
@@ -137,7 +72,7 @@
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+								<a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> Logout</a>
 							</ul>
 							<!-- /.dropdown-user -->
 						</li>
@@ -183,7 +118,7 @@
 					</div>
 				</div>
 				<ul class="nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a href="/admin/dashboard">
 							<i class="fa-solid fa-gauge"></i>
 							<p>Dashboard</p>
@@ -199,9 +134,6 @@
 						<a href="/admin/all-products">
 							<i class="fa-solid fa-tarp"></i>
 							<p>All Products</p>
-							<span class="badge badge-count">
-								<%= products.length %>
-							</span>
 						</a>
 					</li>
 					<li class="nav-item">
@@ -210,7 +142,7 @@
 							<p>Add Staff</p>
 						</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a href="/staff/all">
 							<i class="fa-solid fa-users"></i>
 							<p>All Staff</p>
@@ -228,49 +160,72 @@
 		<div class="main-panel">
 			<div class="content">
 				<div class="container-fluid">
-					<h4 class="page-title">Dashboard > <span class="text-primary">Branches</span></h4>
+					<h4 class="page-title">Update Staff Details - <span class="text-primary">
+							<%= staff[0].staff_name %>
+						</span></h4>
 					<div class="row justify-content-center">
-						<% if (branches.length < 1) { %>
-							<h1>No Branches Available</h1>
-							<% } else { %>
-								<% branches.forEach(branch=> { %>
-									<a href="/branch/<%= branch.branch_id %>" class="col-md-3 title=" view">
-										<div class="card card-stats card-primary" style="box-sizing: border-box; height: 150px;">
-											<div class="card-body ">
-												<div class="row">
-													<div class="col-5">
-														<div class="icon-big text-center">
-															<i class="la la-bar-chart"></i>
-														</div>
-													</div>
-													<div class="col-7 d-flex align-items-center">
-														<div class="numbers">
-															<h6 class="card-title">
-																<%= branch.branch_name %>
-															</h6>
-															<p class="card-category">Last Inspected: <span>
-																	<%= branch.last_inspected %>
-																</span></p>
-														</div>
-													</div>
-												</div>
-											</div>
+						<div class="col-md-6">
+							<div class="card">
+								<form action="/staff/<%= staff[0].payroll_id %>/update" method="POST">
+									<input type="hidden" name="payrollId" value="<%= staff[0].payroll_id %>">
+									<div class="card-header">
+										<div class="card-title">Edit staff details</div>
+									</div>
+									<div class="card-body">
+										<!-- Staff Name -->
+										<div class="form-group">
+											<label for="staffName">Staff Name</label>
+											<input type="text" class="form-control" id="staffName" name="staffName"
+												placeholder="Enter staff name" value="<%= staff[0].staff_name %>" required>
 										</div>
-									</a>
-									<% }) %>
-										<% } %>
-
-
-
+										<!-- Email -->
+										<div class="form-group">
+											<label for="email">Email</label>
+											<input type="email" class="form-control" id="email" name="email"
+												placeholder="Enter email address" value="<%= staff[0].email %>" required>
+										</div>
+										<!-- Phone -->
+										<div class="form-group">
+											<label for="phone">Phone</label>
+											<input type="tel" class="form-control" id="phone" name="phone"
+												placeholder="Enter phone number" value="<%= staff[0].phone %>" required>
+										</div>
+										<!-- Address -->
+										<div class="form-group">
+											<label for="address">Address</label>
+											<textarea class="form-control" id="address" name="address" rows="3"
+												placeholder="Enter address" required><%= staff[0].address %></textarea>
+										</div>
+										<!-- Salary -->
+										<div class="form-group">
+											<label for="salary">Salary</label>
+											<input type="number" class="form-control" id="salary" name="salary"
+												placeholder="0.00" step="0.01" value="<%= staff[0].salary %>" required>
+										</div>
+										<!-- Level -->
+										<div class="form-group">
+											<label for="level">Level</label>
+											<input type="text" class="form-control" id="level" name="level"
+												placeholder="Enter staff level" value="<%= staff[0].level %>" required>
+										</div>
+									</div>
+									<div class="card-action">
+										<button class="btn btn-success">Submit</button>
+										<input class="btn btn-danger" type="reset">
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
+
 				</div>
 			</div>
-
 		</div>
 	</div>
 	</div>
 
 	<%- include('./partials/responseMessage') %>
+
 </body>
 <script src="/js/core/jquery.3.2.1.min.js"></script>
 <script src="/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
@@ -278,7 +233,6 @@
 <script src="/js/core/bootstrap.min.js"></script>
 <script src="/js/plugin/chartist/chartist.min.js"></script>
 <script src="/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script>
-<!-- <script src="/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script> -->
 <script src="/iziToast-master/dist/js/iziToast.min.js"></script>
 <script src="/js/plugin/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 <script src="/js/plugin/jquery-mapael/jquery.mapael.min.js"></script>
@@ -286,7 +240,6 @@
 <script src="/js/plugin/chart-circle/circles.min.js"></script>
 <script src="/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 <script src="/js/ready.min.js"></script>
-<script src="/js/demo.js"></script>
 
 <script src="/js/toast.js"></script>
 
