--- a/views/all-staff.ejs
+++ b/views/all-staff.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -81,7 +81,7 @@
 			</nav>
 		</div>
 		<div class="sidebar">
-			<div class="scrollbar-inner sidebar-wrapper">
+			<div class="sidebar-wrapper">
 				<div class="user">
 					<div class="photo">
 						<img src="/img/profile-icon.png">
@@ -185,6 +185,18 @@
 						<a href="/ledger/trial-balance">
 							<i class="fa-solid fa-balance-scale"></i>
 							<p>Trial Balance</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/balance-sheet">
+							<i class="fa-solid fa-file-invoice-dollar"></i>
+							<p>Balance Sheet</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/profit-loss">
+							<i class="fa-solid fa-money-bill-trend-up"></i>
+							<p>Profit & Loss</p>
 						</a>
 					</li>
 					<li class="nav-item">
