--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -197,7 +197,43 @@
 							<span class="badge badge-count"></span>
 						</a>
 					</li>
+										<li class="nav-item">
+						<a href="/ledger/add">
+							<i class="fa-solid fa-book"></i>
+							<p>Ledger Entry</p>
+						</a>
+					</li>
 					<li class="nav-item">
+						<a href="/ledger/view">
+							<i class="fa-solid fa-book-open"></i>
+							<p>View Ledger</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/accounts">
+							<i class="fa-solid fa-sitemap"></i>
+							<p>Chart of Accounts</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/trial-balance">
+							<i class="fa-solid fa-balance-scale"></i>
+							<p>Trial Balance</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/balance-sheet">
+							<i class="fa-solid fa-file-invoice-dollar"></i>
+							<p>Balance Sheet</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/profit-loss">
+							<i class="fa-solid fa-money-bill-trend-up"></i>
+							<p>Profit & Loss</p>
+						</a>
+					</li>
+<li class="nav-item">
 						<a href="/logout">
 							<i class="fas fa-sign-out-alt"></i>
 							<p>Log Out</p>
