--- a/views/chart-of-accounts.ejs
+++ b/views/chart-of-accounts.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -65,7 +65,7 @@
 			</nav>
 		</div>
 		<div class="sidebar">
-			<div class="scrollbar-inner sidebar-wrapper">
+			<div class="sidebar-wrapper">
 				<div class="user">
 					<div class="photo"><img src="/img/profile-icon.png"></div>
 					<div class="info">
@@ -94,6 +94,18 @@
 					<li class="nav-item"><a href="/ledger/view"><i class="fa-solid fa-book-open"></i><p>View Ledger</p></a></li>
 					<li class="nav-item active"><a href="/ledger/accounts"><i class="fa-solid fa-sitemap"></i><p>Chart of Accounts</p></a></li>
 					<li class="nav-item"><a href="/ledger/trial-balance"><i class="fa-solid fa-balance-scale"></i><p>Trial Balance</p></a></li>
+					<li class="nav-item">
+						<a href="/ledger/balance-sheet">
+							<i class="fa-solid fa-file-invoice-dollar"></i>
+							<p>Balance Sheet</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/profit-loss">
+							<i class="fa-solid fa-money-bill-trend-up"></i>
+							<p>Profit & Loss</p>
+						</a>
+					</li>
 					<li class="nav-item"><a href="/logout"><i class="fas fa-sign-out-alt"></i><p>Log Out</p></a></li>
 				</ul>
 			</div>
@@ -109,7 +121,7 @@
 						<div class="col-md-12">
 							<div class="card account-card">
 								<div class="card-header">
-									<div class="card-title"><i class="fa-solid fa-list"></i> All Accounts <span class="badge badge-light ml-2"><%= accounts.length %></span></div>
+									<div class="card-title text-white"><i class="fa-solid fa-list"></i> All Accounts <span class="badge badge-light ml-2"><%= accounts.length %></span></div>
 								</div>
 								<div class="card-body">
 									<div class="account-type-header asset"><i class="fa-solid fa-building-columns"></i> ASSETS</div>
