--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -146,7 +146,7 @@
 			</nav>
 		</div>
 		<div class="sidebar">
-			<div class="scrollbar-inner sidebar-wrapper">
+			<div class="sidebar-wrapper">
 				<div class="user">
 					<div class="photo">
 						<img src="/img/profile-icon.png">
@@ -246,18 +246,20 @@
 							<p>Chart of Accounts</p>
 						</a>
 					</li>
+					<li class="nav-item"><a href="/ledger/trial-balance"><i class="fa-solid fa-balance-scale"></i><p>Trial Balance</p></a></li>
 					<li class="nav-item">
-						<a href="/ledger/trial-balance">
-							<i class="fa-solid fa-balance-scale"></i>
-							<p>Trial Balance</p>
+						<a href="/ledger/balance-sheet">
+							<i class="fa-solid fa-file-invoice-dollar"></i>
+							<p>Balance Sheet</p>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="/logout">
-							<i class="fas fa-sign-out-alt"></i>
-							<p>Log Out</p>
+						<a href="/ledger/profit-loss">
+							<i class="fa-solid fa-money-bill-trend-up"></i>
+							<p>Profit & Loss</p>
 						</a>
 					</li>
+					<li class="nav-item"><a href="/logout"><i class="fas fa-sign-out-alt"></i><p>Log Out</p></a></li>
 				</ul>
 			</div>
 		</div>
@@ -270,7 +272,7 @@
 							<h1>No Branches Available</h1>
 							<% } else { %>
 								<% branches.forEach(branch=> { %>
-									<a href="/branch/<%= branch.branch_id %>" class="col-md-3 title=" view">
+									<a href="/branch/<%= branch.branch_id %>" class="col-md-3" title="view">
 										<div class="card card-stats card-primary" style="box-sizing: border-box; height: 150px;">
 											<div class="card-body ">
 												<div class="row">
