--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -283,7 +283,43 @@
               <span class="badge badge-count"></span>
             </a>
           </li>
-          <li class="nav-item">
+          					<li class="nav-item">
+						<a href="/ledger/add">
+							<i class="fa-solid fa-book"></i>
+							<p>Ledger Entry</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/view">
+							<i class="fa-solid fa-book-open"></i>
+							<p>View Ledger</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/accounts">
+							<i class="fa-solid fa-sitemap"></i>
+							<p>Chart of Accounts</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/trial-balance">
+							<i class="fa-solid fa-balance-scale"></i>
+							<p>Trial Balance</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/balance-sheet">
+							<i class="fa-solid fa-file-invoice-dollar"></i>
+							<p>Balance Sheet</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/profit-loss">
+							<i class="fa-solid fa-money-bill-trend-up"></i>
+							<p>Profit & Loss</p>
+						</a>
+					</li>
+<li class="nav-item">
             <a href="/logout">
               <i class="fas fa-sign-out-alt"></i>
               <p>Log Out</p>
@@ -364,9 +400,9 @@
                                     notifications</small>
                               <nav>
                                 <ul class="pagination pagination-sm mb-0">
-                                  <li class="page-item disabled"><a class="page-link" href="#">‹</a></li>
+                                  <li class="page-item disabled"><a class="page-link" href="#">â€¹</a></li>
                                   <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                  <li class="page-item disabled"><a class="page-link" href="#">›</a></li>
+                                  <li class="page-item disabled"><a class="page-link" href="#">â€º</a></li>
                                 </ul>
                               </nav>
                             </div>
@@ -420,9 +456,9 @@
                                   notifications</small>
                             <nav>
                               <ul class="pagination pagination-sm mb-0">
-                                <li class="page-item disabled"><a class="page-link" href="#">‹</a></li>
+                                <li class="page-item disabled"><a class="page-link" href="#">â€¹</a></li>
                                 <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item disabled"><a class="page-link" href="#">›</a></li>
+                                <li class="page-item disabled"><a class="page-link" href="#">â€º</a></li>
                               </ul>
                             </nav>
                           </div>
@@ -465,9 +501,9 @@
                                   notifications</small>
                             <nav>
                               <ul class="pagination pagination-sm mb-0">
-                                <li class="page-item disabled"><a class="page-link" href="#">‹</a></li>
+                                <li class="page-item disabled"><a class="page-link" href="#">â€¹</a></li>
                                 <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item disabled"><a class="page-link" href="#">›</a></li>
+                                <li class="page-item disabled"><a class="page-link" href="#">â€º</a></li>
                               </ul>
                             </nav>
                           </div>
