--- a/views/view-ledger.ejs
+++ b/views/view-ledger.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -63,7 +63,7 @@
 			</nav>
 		</div>
 		<div class="sidebar">
-			<div class="scrollbar-inner sidebar-wrapper">
+			<div class="sidebar-wrapper">
 				<div class="user">
 					<div class="photo"><img src="/img/profile-icon.png"></div>
 					<div class="info">
@@ -92,6 +92,18 @@
 					<li class="nav-item active"><a href="/ledger/view"><i class="fa-solid fa-book-open"></i><p>View Ledger</p></a></li>
 					<li class="nav-item"><a href="/ledger/accounts"><i class="fa-solid fa-sitemap"></i><p>Chart of Accounts</p></a></li>
 					<li class="nav-item"><a href="/ledger/trial-balance"><i class="fa-solid fa-balance-scale"></i><p>Trial Balance</p></a></li>
+					<li class="nav-item">
+						<a href="/ledger/balance-sheet">
+							<i class="fa-solid fa-file-invoice-dollar"></i>
+							<p>Balance Sheet</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/profit-loss">
+							<i class="fa-solid fa-money-bill-trend-up"></i>
+							<p>Profit & Loss</p>
+						</a>
+					</li>
 					<li class="nav-item"><a href="/logout"><i class="fas fa-sign-out-alt"></i><p>Log Out</p></a></li>
 				</ul>
 			</div>
@@ -142,7 +154,7 @@
 						<div class="col-md-12">
 							<div class="card ledger-card">
 								<div class="card-header">
-									<div class="card-title">
+									<div class="card-title text-white">
 										<i class="fa-solid fa-list"></i> Transactions
 										<% if (transactions && transactions.length > 0) { %><span class="badge badge-light ml-2"><%= transactions.length %></span><% } %>
 									</div>
